# rust-bandits

./: .gitignore  Cargo.toml  LICENSE  README.md  cache  config.toml  roadmap.md
.github/workflows/: tests.yml
curl-collection/: add_arm.bru  bruno.json  create.bru  create_bandit.bru  draw.bru  list.bru  list_bandits.bru  ping.bru  stats.bru  update.bru  update_batch.bru
src/: actor.rs  api.rs  config.rs  errors.rs  main.rs  repository.rs  supervisor.rs
src/actors/: accountant.rs  bandit.rs  cache.rs  errors.rs  experiment.rs  experiment_cache.rs  mod.rs  policy_cache.rs  state_store.rs  supervisor.rs
src/api/: errors.rs  mod.rs  requests.rs  responses.rs  routes.rs
src/bandit/: bandit.rs  errors.rs  mod.rs
src/policies/: arm.rs  bandit.rs  epsilon_greedy.rs  errors.rs  mod.rs  policy.rs  rng.rs  thompson_sampling.rs  thomson_sampling.rs  ucb.rs
src/policy/: arm.rs  epsilon_greedy.rs  mod.rs  policy.rs
src/supervisor/: errors.rs  mod.rs  supervisor.rs
