[package]
name = "rust-bandits"
version = "0.1.0"
authors = ["Clément Labrugere"]
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1

[dependencies]
actix = "0.13.5"
actix-http = "3.9.0"
actix-web = "4.9"
config = "0.15.7"
env_logger = "0.11.6"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
log = "0.4.25"
rand = {version = "0.8.5", features = ["small_rng"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2"
typetag = "0.2.19"
uuid = {version = "1.12.1", features = ["v4", "fast-rng", "serde"]}