[package]
name = "rust-bandits"
version = "0.1.0"
authors = ["Clément Labrugere"]
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
rand = {version = "0.8.5", features = ["small_rng"]}
actix = "0.13.5"
actix-http = "3.9.0"
actix-web = "4.9"
config = "0.15.7"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
typetag = "0.2.19"
uuid = {version = "1.12.1", features = ["v4", "fast-rng", "serde"]}
tokio = {version = "1.47.1", features = ["sync"]}
